# addtree

./: .dir-locals.el  .gitignore  README.org  pyproject.toml
addtree/: acq.py  kernel_utils.py  parameter.py  storage.py
examples/: addtree_jenatton_small.py  addtree_model_compression_multiple.py  addtree_model_compression_vgg16.py  addtree_model_compression_vgg16_multiple.py  addtree_resnet20_nas.py  addtree_utils.py  common_utils.py  compression_common.py  makefile  model_compression.py  model_compression_naive.py  model_compression_nni.py  model_compression_vgg16.py  nas_common.py  nested_prune.py  random_model_compression_multiple.py  random_model_compression_vgg16.py  random_model_compression_vgg16_multiple.py  random_resnet20_nas.py  resnet20_nas_optimized.py  smac_35.py  smac_cs_vgg16_multiple.py  smac_model_compression_multiple.py  smac_model_compression_vgg16.py  smac_model_compression_vgg16_35.py  smac_model_compression_vgg16_40.py  smac_model_compression_vgg16_multiple.py  smac_multiple.py  smac_resnet20_nas.py  smac_single.py  smac_utils.py  tpe_model_compression_multiple.py  tpe_model_compression_vgg16_multiple.py  tpe_resnet20_nas.py  tpe_space_resnet50_multiple.py  tpe_utils.py
examples/models/: resnet_cifar10.py
examples/script/: collect_XY.pl  extract_info.pl  find_best.pl  haha.py  parse_line.pl  parse_to_json.pl  stats.sh
examples/space_utils/: addtree_cs_jenatton_small.py  addtree_cs_resnet20_nas.py  addtree_cs_resnet50.py  addtree_cs_resnet56.py  addtree_cs_vgg16.py  addtree_utils.py  (+14 more)
tests/: test_addtree.py  test_parameter.py  test_storage.py
(+3 files in other folders)
