[tool.poetry]
name = "addtree"
version = "0.1.0"
description = ""
authors = ["maxc01 <xingchen92@gmail.com>"]

[tool.poetry.dependencies]
# python = "^3.11"
# numpy = "^1.18.2"
# scipy = "^1.4.1"
# torch = "^1.4.0"
# torchvision = "^0.5.0"
george = { git = "https://github.com/maxc01/george" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
